# python-playground

property/: test_class_prop_method.py
pytest/: pyproject.toml  run.sh
unittest/loader/tests/: __init__.py  test_1_multiply.py  test_2_multiply_FAILED.py  test_3_multiply.py
unittest/loader_simple/tests/: test_add.py
unittest/simple/: run.sh
unittest/simple/tests/: test_add.py
